--- a/kondapur/service_list.html
+++ b/kondapur/service_list.html
@@ -47,74 +47,74 @@
     <div class='row my-5'>
       <div class="col-md-3">
         <div class="list-group">
-          <a href="../kondapur/gyms.html" class="list-group-item list-group-item-action">Gyms</a>
-          <a href="../kondapur/BeautyParlour.html" class="list-group-item list-group-item-action">Beauty parlour</a>
-          <a href="../kondapur/carpentors.html" class="list-group-item list-group-item-action">Carpenters</a>
-          <a href="../kondapur/clinics.html" class="list-group-item list-group-item-action">Clinics</a>
-          <a href="../kondapur/coaching.html" class="list-group-item list-group-item-action">Coaching_centers</a>
-          <a href="../kondapur/collages_universities.html"class="list-group-item list-group-item-action">Colleges&universities</a>
-          <a href="../kondapur/car_rental.html" class="list-group-item list-group-item-action">CarRental</a>
-          <a href="../kondapur/bikerentals.html" class="list-group-item list-group-item-action">BikeRentalservices</a>
-          <a href="../kondapur/bus_services.html" class="list-group-item list-group-item-action">BusServices</a>
-          <a href="../kondapur/bus_services.html" class="list-group-item list-group-item-action">PackersandMovers</a>
-          <a href="../kondapur/super_market.html" class="list-group-item list-group-item-action">SuperMarkets</a>
-          <a href="../kondapur/nailsalons.html" class="list-group-item list-group-item-action">NailSalons</a>
-          <a href="../kondapur/makeupartist.html" class="list-group-item list-group-item-action">MakeupArtists</a>
-          <a href="../kondapur/skincareclinics.html" class="list-group-item list-group-item-action">SkinCareClincs</a>
+          <a href="gyms.html" class="list-group-item list-group-item-action">Gyms</a>
+          <a href="BeautyParlour.html" class="list-group-item list-group-item-action">Beauty parlour</a>
+          <a href="carpentors.html" class="list-group-item list-group-item-action">Carpenters</a>
+          <a href="clinics.html" class="list-group-item list-group-item-action">Clinics</a>
+          <a href="coaching.html" class="list-group-item list-group-item-action">Coaching_centers</a>
+          <a href="collages_universities.html"class="list-group-item list-group-item-action">Colleges&universities</a>
+          <a href="car_rental.html" class="list-group-item list-group-item-action">CarRental</a>
+          <a href="bikerentals.html" class="list-group-item list-group-item-action">BikeRentalservices</a>
+          <a href="bus_services.html" class="list-group-item list-group-item-action">BusServices</a>
+          <a href="bus_services.html" class="list-group-item list-group-item-action">PackersandMovers</a>
+          <a href="super_market.html" class="list-group-item list-group-item-action">SuperMarkets</a>
+          <a href="nailsalons.html" class="list-group-item list-group-item-action">NailSalons</a>
+          <a href="makeupartist.html" class="list-group-item list-group-item-action">MakeupArtists</a>
+          <a href="skincareclinics.html" class="list-group-item list-group-item-action">SkinCareClincs</a>
         </div>
       </div>
       <div class="col-md-3">
         <div class="list-group">
-          <a href="../kondapur/diagnostic_center.html" class="list-group-item list-group-item-action">Diagnosticcentres</a>
-          <a href="../kondapur/Electrician.html" class="list-group-item list-group-item-action">Electricians</a>
-          <a href="../kondapur/eye_hospital.html" class="list-group-item list-group-item-action">Eye hospitals</a>
-          <a href="../kondapur/home_appliance.html" class="list-group-item list-group-item-action">Home appliance repair</a>
-          <a href="../kondapur/house_cleaning.html" class="list-group-item list-group-item-action">House cleaning</a>
-          <a href="../kondapur/medition_centers.html" class="list-group-item list-group-item-action">Meditation centres</a>
-          <a href="../kondapur/nutrionist.html" class="list-group-item list-group-item-action">Nutritionists</a>
-          <a href="../kondapur/plumbers.html" class="list-group-item list-group-item-action">Plumbers</a>
-          <a href="../kondapur/schools.html" class="list-group-item list-group-item-action">Schools</a>
-          <a href="../kondapur/spa&massage_center.html" class="list-group-item list-group-item-action">Spa & MassageCentres</a>
-          <a href="../kondapur/department_store.html" class="list-group-item list-group-item-action">DepartmentStores</a>
-          <a href="../kondapur/art_gallaries.html" class="list-group-item list-group-item-action">ArtGallaries</a>
-          <a href="../kondapur/beautysalon.html" class="list-group-item list-group-item-action">BeautySalon</a>
-          <a href="../kondapur/hair_dressers.html" class="list-group-item list-group-item-action">HairDressers</a>
+          <a href="diagnostic_center.html" class="list-group-item list-group-item-action">Diagnosticcentres</a>
+          <a href="Electrician.html" class="list-group-item list-group-item-action">Electricians</a>
+          <a href="eye_hospital.html" class="list-group-item list-group-item-action">Eye hospitals</a>
+          <a href="home_appliance.html" class="list-group-item list-group-item-action">Home appliance repair</a>
+          <a href="house_cleaning.html" class="list-group-item list-group-item-action">House cleaning</a>
+          <a href="medition_centers.html" class="list-group-item list-group-item-action">Meditation centres</a>
+          <a href="nutrionist.html" class="list-group-item list-group-item-action">Nutritionists</a>
+          <a href="plumbers.html" class="list-group-item list-group-item-action">Plumbers</a>
+          <a href="schools.html" class="list-group-item list-group-item-action">Schools</a>
+          <a href="spa&massage_center.html" class="list-group-item list-group-item-action">Spa & MassageCentres</a>
+          <a href="department_store.html" class="list-group-item list-group-item-action">DepartmentStores</a>
+          <a href="art_gallaries.html" class="list-group-item list-group-item-action">ArtGallaries</a>
+          <a href="beautysalon.html" class="list-group-item list-group-item-action">BeautySalon</a>
+          <a href="hair_dressers.html" class="list-group-item list-group-item-action">HairDressers</a>
         </div>
       </div>
       <div class="col-md-3">
         <div class="list-group">
-          <a href="../kondapur/pest_control.html" class="list-group-item list-group-item-action">Pest control</a>
-          <a href="../kondapur/petshops.html" class="list-group-item list-group-item-action">Pet Shops</a>
-          <a href="../kondapur/pharmacies.html" class="list-group-item list-group-item-action">Pharmacies</a>
-          <a href="../kondapur/pharmacies.html" class="list-group-item list-group-item-action">Physiotherapies</a>
-          <a href="../kondapur/banks.html" class="list-group-item list-group-item-action">Banks</a>
-          <a href="../kondapur/atms.html" class="list-group-item list-group-item-action">ATMs</a>
-          <a href="../kondapur/insurance_agencies.html" class="list-group-item list-group-item-action">InsuranceAgencies</a>
-          <a href="../kondapur/financial_advisors.html" class="list-group-item list-group-item-action">FinacialAdvisors</a>
-          <a href="../kondapur/stock_brokers.html" class="list-group-item list-group-item-action">StockBrokers</a>
-          <a href="../kondapur/loans_providers.html" class="list-group-item list-group-item-action">LoanProviders</a>
-          <a href="../kondapur/boutiques.html" class="list-group-item list-group-item-action">Boutiques</a>
-          <a href="../kondapur/book_store.html" class="list-group-item list-group-item-action">bookstore</a>
-          <a href="../kondapur/movie_theaters.html" class="list-group-item list-group-item-action">MovieTheaters</a>
-          <a href="../kondapur/amusement_parks.html" class="list-group-item list-group-item-action">AmusementParks</a>
+          <a href="pest_control.html" class="list-group-item list-group-item-action">Pest control</a>
+          <a href="petshops.html" class="list-group-item list-group-item-action">Pet Shops</a>
+          <a href="pharmacies.html" class="list-group-item list-group-item-action">Pharmacies</a>
+          <a href="pharmacies.html" class="list-group-item list-group-item-action">Physiotherapies</a>
+          <a href="banks.html" class="list-group-item list-group-item-action">Banks</a>
+          <a href="atms.html" class="list-group-item list-group-item-action">ATMs</a>
+          <a href="insurance_agencies.html" class="list-group-item list-group-item-action">InsuranceAgencies</a>
+          <a href="financial_advisors.html" class="list-group-item list-group-item-action">FinacialAdvisors</a>
+          <a href="stock_brokers.html" class="list-group-item list-group-item-action">StockBrokers</a>
+          <a href="loans_providers.html" class="list-group-item list-group-item-action">LoanProviders</a>
+          <a href="boutiques.html" class="list-group-item list-group-item-action">Boutiques</a>
+          <a href="book_store.html" class="list-group-item list-group-item-action">bookstore</a>
+          <a href="movie_theaters.html" class="list-group-item list-group-item-action">MovieTheaters</a>
+          <a href="amusement_parks.html" class="list-group-item list-group-item-action">AmusementParks</a>
         </div>
       </div>
       <div class="col-md-3">
         <div class="list-group">
-          <a href="../kondapur/sports_club.html" class="list-group-item list-group-item-action">Sports Club</a>
-          <a href="../kondapur/yoga.html" class="list-group-item list-group-item-action">Yoga Centers</a>
-          <a href="../kondapur/Dentalclinics.html"class="list-group-item list-group-item-action">Dental_clinics</a>
-          <a href="../kondapur/real_state.html" class="list-group-item list-group-item-action">RealEstateAgncie</a>
-          <a href="../kondapur/rental_servicemanagement.html" class="list-group-item list-group-item-action">RentalServiceMangements</a>
-          <a href="../kondapur/interior_design.html" class="list-group-item list-group-item-action">interiordesign services</a>
-          <a href="../kondapur/home_inspection.html" class="list-group-item list-group-item-action"> HomeInspection</a>
-          <a href="../kondapur/property.html" class="list-group-item list-group-item-action">PropertyManagementServices</a>
-          <a href="../kondapur/tax_services.html" class="list-group-item list-group-item-action">TaxiServices</a>
-          <a href="../kondapur/packers&movers.html" class="list-group-item list-group-item-action">PackersandMovers</a>
-          <a href="../kondapur/electronic_store.html" class="list-group-item list-group-item-action">ElectronicStores</a>
-          <a href="../kondapur/gamingcenters.html" class="list-group-item list-group-item-action">GamingCenters</a>
-          <a href="../kondapur/event_management.html" class="list-group-item list-group-item-action">EventManagements</a>
-          <a href="../kondapur/music&dance_studios.html" class="list-group-item list-group-item-action">music&dance studios</a>
+          <a href="sports_club.html" class="list-group-item list-group-item-action">Sports Club</a>
+          <a href="yoga.html" class="list-group-item list-group-item-action">Yoga Centers</a>
+          <a href="Dentalclinics.html"class="list-group-item list-group-item-action">Dental_clinics</a>
+          <a href="real_state.html" class="list-group-item list-group-item-action">RealEstateAgncie</a>
+          <a href="rental_servicemanagement.html" class="list-group-item list-group-item-action">RentalServiceMangements</a>
+          <a href="interior_design.html" class="list-group-item list-group-item-action">interiordesign services</a>
+          <a href="home_inspection.html" class="list-group-item list-group-item-action"> HomeInspection</a>
+          <a href="property.html" class="list-group-item list-group-item-action">PropertyManagementServices</a>
+          <a href="tax_services.html" class="list-group-item list-group-item-action">TaxiServices</a>
+          <a href="packers&movers.html" class="list-group-item list-group-item-action">PackersandMovers</a>
+          <a href="electronic_store.html" class="list-group-item list-group-item-action">ElectronicStores</a>
+          <a href="gamingcenters.html" class="list-group-item list-group-item-action">GamingCenters</a>
+          <a href="event_management.html" class="list-group-item list-group-item-action">EventManagements</a>
+          <a href="music&dance_studios.html" class="list-group-item list-group-item-action">music&dance studios</a>
         </div>
       </div>
     </div>
