--- a/kondapur/service_list.html
+++ b/kondapur/service_list.html
@@ -43,7 +43,7 @@
   </nav>
 
   <div class="container">
-    <h1 class="mt-4">Select service in Madhapur</h1>
+    <h1 class="mt-4">Select service in Kondapur</h1>
     <div class='row my-5'>
       <div class="col-md-3">
         <div class="list-group">
